clusters/staging/apps/home/homepage/external-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage-external-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    external-dns.alpha.kubernetes.io/target: staging.internal.javiersant.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://homepage-external.staging.internal.javiersant.com"
    gethomepage.dev/description: External Homepage Dashboard
    gethomepage.dev/group: Home
    gethomepage.dev/icon: filecloud.svg
    gethomepage.dev/name: Homepage External
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage-external.staging.internal.javiersant.com`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy
          namespace: iam
      services:
        - kind: Service
          name: homepage
          port: 3000
  tls:
    secretName: wildcard-javiersant-com-tls
